removed fwlog query from citadel (#23605)
