# api/generated/telemetry_query/swagger/external/svc_telemetry_query.swagger.json
@@ -16,64 +16,6 @@
     "application/json"
   ],
   "paths": {
-    "/telemetry/v1/fwlogs": {
-      "get": {
-        "summary": "Firewall logs query",
-        "operationId": "GetFwlogs_1",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/telemetry_queryFwlogsQueryResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "tenant",
-            "description": "Tenant for the request.",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "namespace",
-            "description": "Namespace for the request.",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "telemetry_query/v1"
-        ]
-      },
-      "post": {
-        "summary": "Firewall logs query",
-        "operationId": "PostFwlogs",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/telemetry_queryFwlogsQueryResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/telemetry_queryFwlogsQueryListCreate"
-            }
-          }
-        ],
-        "tags": [
-          "telemetry_query/v1"
-        ]
-      }
-    },
     "/telemetry/v1/metrics": {
       "get": {
         "summary": "telemetry metrics query",
@@ -591,312 +533,6 @@
         }
       },
       "description": "`Any` contains an arbitrary serialized protocol buffer message along with a URL that describes the type of the serialized message. Protobuf library provides support to pack/unpack Any values in the form of utility functions or additional generated methods of the Any type. Example 1: Pack and unpack a message in C++. Foo foo = ...; Any any; any.PackFrom(foo); ... if (any.UnpackTo(\u0026foo)) { ... } Example 2: Pack and unpack a message in Java. Foo foo = ...; Any any = Any.pack(foo); ... if (any.is(Foo.class)) { foo = any.unpack(Foo.class); } Example 3: Pack and unpack a message in Python. foo = Foo(...) any = Any() any.Pack(foo) ... if any.Is(Foo.DESCRIPTOR): any.Unpack(foo) ... Example 4: Pack and unpack a message in Go foo := \u0026pb.Foo{...} any, err := ptypes.MarshalAny(foo) ... foo := \u0026pb.Foo{} if err := ptypes.UnmarshalAny(any, foo); err != nil { ... } The pack methods provided by protobuf library will by default use 'type.googleapis.com/full.type.name' as the type URL and the unpack methods only use the fully qualified type name after the last '/' in the type URL, for example \"foo.bar.com/x/y.z\" will yield type name \"y.z\". JSON ==== The JSON representation of an `Any` value uses the regular representation of the deserialized, embedded message, with an additional field `@type` which contains the type URL. Example: package google.profile; message Person { string first_name = 1; string last_name = 2; } { \"@type\": \"type.googleapis.com/google.profile.Person\", \"firstName\": \u003cstring\u003e, \"lastName\": \u003cstring\u003e } If the embedded message type is well-known and has a custom JSON representation, that representation will be embedded adding a field `value` which holds the custom JSON in addition to the `@type` field. Example (for message [google.protobuf.Duration][]): { \"@type\": \"type.googleapis.com/google.protobuf.Duration\", \"value\": \"1.212s\" }."
-    },
-    "telemetry_queryFwlog": {
-      "type": "object",
-      "required": [
-        "action",
-        "direction"
-      ],
-      "properties": {
-        "tenant": {
-          "type": "string",
-          "description": "Tenant."
-        },
-        "source": {
-          "type": "string",
-          "description": "Source IP,."
-        },
-        "destination": {
-          "type": "string",
-          "description": "Destination IP."
-        },
-        "source-port": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Source Port."
-        },
-        "destination-port": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Destination Port."
-        },
-        "protocol": {
-          "type": "string",
-          "description": "Protocol,."
-        },
-        "action": {
-          "type": "string",
-          "enum": [
-            "allow",
-            "deny",
-            "reject",
-            "implicit_deny"
-          ],
-          "default": "allow",
-          "x-ui-hints": {
-            "allow": "Allow",
-            "deny": "Deny",
-            "implicit_deny": "Implicit-deny",
-            "reject": "Reject"
-          },
-          "description": "Action."
-        },
-        "direction": {
-          "type": "string",
-          "enum": [
-            "from-host",
-            "from-uplink"
-          ],
-          "default": "from-host",
-          "x-ui-hints": {
-            "from-host": "From Host",
-            "from-uplink": "From Uplink"
-          },
-          "description": "Flow Direction."
-        },
-        "rule-id": {
-          "type": "string",
-          "description": "Rule ID."
-        },
-        "session-id": {
-          "type": "string",
-          "description": "Session ID."
-        },
-        "session-state": {
-          "type": "string",
-          "description": "Session state."
-        },
-        "policy-name": {
-          "type": "string",
-          "description": "policy name."
-        },
-        "reporter-id": {
-          "type": "string",
-          "description": "Reporter ID."
-        },
-        "time": {
-          "type": "string",
-          "format": "date-time",
-          "description": "Time the log was created."
-        }
-      }
-    },
-    "telemetry_queryFwlogsQueryList": {
-      "type": "object",
-      "properties": {
-        "tenant": {
-          "type": "string",
-          "description": "Tenant for the request."
-        },
-        "namespace": {
-          "type": "string",
-          "description": "Namespace for the request."
-        },
-        "queries": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/telemetry_queryFwlogsQuerySpec"
-          },
-          "description": "List of queries to execute."
-        }
-      },
-      "description": "FwlogsQueryList contains a list of queries to execute."
-    },
-    "telemetry_queryFwlogsQueryListCreate": {
-      "type": "object",
-      "properties": {
-        "tenant": {
-          "type": "string",
-          "description": "Tenant for the request."
-        },
-        "namespace": {
-          "type": "string",
-          "description": "Namespace for the request."
-        },
-        "queries": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/telemetry_queryFwlogsQuerySpec"
-          },
-          "description": "List of queries to execute."
-        }
-      },
-      "description": "FwlogsQueryList contains a list of queries to execute."
-    },
-    "telemetry_queryFwlogsQueryResponse": {
-      "type": "object",
-      "properties": {
-        "tenant": {
-          "type": "string",
-          "description": "Tenant for the request."
-        },
-        "namespace": {
-          "type": "string",
-          "description": "Namespace for the request."
-        },
-        "results": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/telemetry_queryFwlogsQueryResult"
-          }
-        }
-      },
-      "description": "FwlogsQueryResponse is the response for Fwlogs Query."
-    },
-    "telemetry_queryFwlogsQueryResult": {
-      "type": "object",
-      "properties": {
-        "statement_id": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "logs": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/telemetry_queryFwlog"
-          }
-        }
-      },
-      "description": "FwlogsQueryResult contains fwlogs returned from a fwlogQuery."
-    },
-    "telemetry_queryFwlogsQuerySpec": {
-      "type": "object",
-      "required": [
-        "source-ips",
-        "dest-ips",
-        "source-ports",
-        "dest-ports",
-        "actions",
-        "directions",
-        "sort-order"
-      ],
-      "properties": {
-        "source-ips": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "example": "10.1.1.1, ff02::5 ",
-          "description": "OR of sources IPs to be matched. Should be a valid v4 or v6 IP address."
-        },
-        "dest-ips": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "example": "10.1.1.1, ff02::5 ",
-          "description": "OR of dest IPs to be matched. Should be a valid v4 or v6 IP address."
-        },
-        "source-ports": {
-          "type": "array",
-          "items": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "minimum": 0,
-          "maximum": 65535,
-          "description": "OR of source ports to be matched. Value should be between 0 and 65535."
-        },
-        "dest-ports": {
-          "type": "array",
-          "items": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "minimum": 0,
-          "maximum": 65535,
-          "description": "OR of dest ports to be matched. Value should be between 0 and 65535."
-        },
-        "protocols": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "description": "OR of protocols to be matched."
-        },
-        "actions": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "enum": [
-            "allow",
-            "deny",
-            "reject",
-            "implicit_deny"
-          ],
-          "default": "allow",
-          "x-ui-hints": {
-            "allow": "Allow",
-            "deny": "Deny",
-            "implicit_deny": "Implicit-deny",
-            "reject": "Reject"
-          },
-          "description": "OR of actions to be matched."
-        },
-        "directions": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "enum": [
-            "from-host",
-            "from-uplink"
-          ],
-          "default": "from-host",
-          "x-ui-hints": {
-            "from-host": "From Host",
-            "from-uplink": "From Uplink"
-          },
-          "description": "OR of directions to be matched."
-        },
-        "rule-ids": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "description": "OR of ruleID to be matched."
-        },
-        "policy-names": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "description": "OR of policy names to be matched."
-        },
-        "reporter-ids": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "description": "OR of reporter names to be matched."
-        },
-        "start-time": {
-          "type": "string",
-          "format": "date-time",
-          "description": "StartTime selects all logs with timestamp greater than the StartTime, example 2018-10-18T00:12:00Z."
-        },
-        "end-time": {
-          "type": "string",
-          "format": "date-time",
-          "description": "EndTime selects all logs with timestamp less than the EndTime, example 2018-09-18T00:12:00Z."
-        },
-        "pagination": {
-          "$ref": "#/definitions/telemetry_queryPaginationSpec",
-          "description": "PaginationSpec specifies the number of series to include."
-        },
-        "sort-order": {
-          "type": "string",
-          "enum": [
-            "ascending",
-            "descending"
-          ],
-          "default": "descending",
-          "description": "SortOrder specifies time ordering of results."
-        }
-      },
-      "description": "FwlogsQuerySpec allows selecting logs by all attributes All fields are ANDed together."
     },
     "telemetry_queryMetricsQueryList": {
       "type": "object",
